--- a/projects.json
+++ b/projects.json
@@ -1,14 +1,14 @@
 [{
 	'name': 'Reader',
 	'tagline': 'Realtime Collaboration Tool for Schools',
-	'desc': "<p>Reader is a collaborative reading tool for students that allows students to discuss passages and ask questions inline in Reader's intelligent eBook reader.</p><p><i>Node, MongoDB and Meteor. Web, iOS and Android (Cordova)</i></p>",
+	'desc': '<p>Reader is a collaborative reading tool for students that allows students to discuss passages and ask questions inline in Reader\'s intelligent eBook reader.</p><p><i>Node, MongoDB and Meteor. Web, iOS and Android (Cordova)</i></p>',
 	'imgsrc': 'http://jainlabs.com/img/work/reader/bar.png',
 	'link': 'http://reader.jainlabs.com'
 },
 {
 	'name': 'Infinite Loop',
 	'tagline': 'Intelligent Mood-Matching Music Player',
-	'desc': "<p>Infinite Loop plays a long stream of music matched to the user's moods. Music analysis algorithms extract key datapoints such as tempo and key from a user's private libraries. Users can stream music through searches like `airy electronic pop`</p><p><i>Node, Python, MongoDB, Celery/RabbitMQ on Web and iOS</i></p>",
+	'desc': '<p>Infinite Loop plays a long stream of music matched to the user's moods. Music analysis algorithms extract key datapoints such as tempo and key from a user\'s private libraries. Users can stream music through searches like `airy electronic pop`</p><p><i>Node, Python, MongoDB, Celery/RabbitMQ on Web and iOS</i></p>',
 	'imgsrc':'http://jainlabs.com/img/work/infloop/home.png',
 	'link': ''
 }]
