--- a/projects.json
+++ b/projects.json
@@ -17,7 +17,7 @@
 		"name": "Radioactive",
 		"tagline": "Personalized, Adaptive Learning",
 		"desc": "<p>Radioactive is a mobile app that allows students to learn rapidly with higher repitition by adaptively delivering content while strategically quizzing to guide their learning plan.</p><p><i>PHP, jQuery Mobile, Cordova on iOS/Android</i></p>",
-		"imgsrc":"//dl.dropboxusercontent.com/u/2724547/serve/parasjaincom/res/radioactive.png",
+		"imgsrc":"//dl.dropboxusercontent.com/u/2724547/serve/parasjaincom/res/radioactive.jpg",
 		"link": ""
 	}
 ]
