--- a/projects.json
+++ b/projects.json
@@ -22,5 +22,5 @@
 			"link": ""
 		}
 	],
-	"resumeUrl": "https://dl.dropboxusercontent.com/s/yjhi0z5vxz5wxml/Paras Jain Resume.pdf"
+	"resumeUrl": "https://dl.dropboxusercontent.com/u/2724547/ParasJainResume.pdf"
 }
