--- a/projects.json
+++ b/projects.json
@@ -22,5 +22,6 @@
 			"link": ""
 		}
 	],
-	"resumeUrl": "https://dl.dropboxusercontent.com/u/2724547/ParasJainResume.pdf"
+	"resumeUrl": "https://dl.dropboxusercontent.com/u/2724547/ParasJainResume.pdf",
+	"name": "Paras Jain"
 }
